exhibit/trunk/src/webapp/api/compilations/exhibit-nl-compilation.css
/* ... */
.exhibit-views-unplottableCount {
    font-weight: bold;
}
.exhibit-views-totalCount {
}

div.exhibit-views-bubbleWithItems {
}

div.exhibit-collectionView {
}

div.exhibit-collectionView-header {
}
span.exhibit-collectionView-header-count {
    font-size:      200%;
}
span.exhibit-collectionView-header-types {
    padding-left:   0.5em;
}
span.exhibit-collectionView-header-details {
    padding-left:   0.5em;
    color:          #888;
}
div.exhibit-collectionView-header-sortControls {
    text-align:     center;
    margin:         1em 0;
}
.exhibit-collectionView-header-groupControls {
    cursor: pointer;
}
.exhibit-collectionView-header-duplicateControls {
    cursor: pointer;
}

div.exhibit-collectionView-body {
}

div.exhibit-collectionView-group {
}

span.exhibit-collectionView-group-count {
}

div.exhibit-collectionView-group-content {
    margin-left: 1em;
}

div.exhibit-collectionView-group h1 {
    font-size:      150%;
    margin:         1em 0;
}

div.exhibit-collectionView-group h2 {
    font-size:      120%;
    margin:         0.5em 0;
}

.exhibit-collectionView-group h3 {
}

div.exhibit-collectionView-footer {
    clear:      both;
    text-align: center;
    margin:     2em 0;
}

div.exhibit-collectionView-pagingControls {
    margin: 1em 0;
    text-align: center;
}

.exhibit-collectionView-pagingControls-currentPage {
    padding: 0px 0.5em;
    font-weight: bold;
}

.exhibit-collectionView-pagingControls-page {
    padding: 0px 0.5em;
}

table.exhibit-tabularView-body {
    width: 100%;
}

.exhibit-tabularView-columnHeader {
    cursor:         pointer;
    white-space:    pre;
}

.exhibit-tabularView-columnHeader-sorted {
    cursor:         pointer;
    white-space:    pre;
}

div.exhibit-tabularView-pagingControls {
    margin: 1em 0;
    text-align: center;
}

.exhibit-tabularView-pagingControls-currentPage {
    padding: 0px 0.5em;
    font-weight: bold;
}

.exhibit-tabularView-pagingControls-page {
    padding: 0px 0.5em;
}

div.exhibit-thumbnailView-group {
    clear: both;
}

div.exhibit-thumbnailView-body {
}

div.exhibit-thumbnailView-itemContainer {
    float:      left;
}

div.exhibit-thumbnailView-itemContainer-IE {
    float:      left;
    width:      0;
    overflow:   visible;
}table.exhibit-tileView-body {
    width: 100%;
}

.exhibit-tileView-body > tbody > tr > td:first-child {
    width:      3em;
    text-align: right;
    color:      #aaa
}

td.exhibit-tileView-itemIndex {
}/*==================================================
 * View Panel styles
 *==================================================
 */
div.exhibit-viewPanel {
}

div.exhibit-viewPanel-viewSelection {
    text-align: center;
}

span.exhibit-viewPanel-viewSelection-view {
    text-transform: uppercase;
    cursor:         pointer;
}

span.exhibit-viewPanel-viewSelection-selectedView {
    text-transform: uppercase;
    font-weight:    bold;
    border-bottom:  3px solid red;
}

div.exhibit-viewPanel-viewContainer {
}

/*==================================================
 * Collection Summary Widget styles
 *==================================================
 */
div.exhibit-collectionSummaryWidget {
}
span.exhibit-collectionSummaryWidget-count {
    font-size:      200%;
}
span.exhibit-collectionSummaryWidget-results {
}
div.exhibit-legendWidget {
    margin:         1em 0;
    text-align:     center;
    line-height:    2em;
}
div.exhibit-legendWidget-entry {
}
span.exhibit-legendWidget-entry-title {
    font-weight: bold;
}
span.exhibit-legendWidget-entry-swatch {
    border:     1px solid #888;
    padding:    0px 3px;
}
.exhibit-optionWidget {
    cursor:     pointer;
}

.exhibit-optionWidget img {
    vertical-align: middle;
}
/*==================================================
 * Resizable Div Widget styles
 *==================================================
 */
div.exhibit-resizableDivWidget-resizer {
    text-align:     center;
    cursor:         s-resize;
    height:         15px;
    clear:          both;
}
div.exhibit-toolboxWidget-popup {
    position:       absolute;
    border:         1px solid #ccc;
    background:     white;
    padding:        3px;
    text-align:     right;
    z-index:        1000;
}

img.exhibit-toolboxWidget-button {
    cursor: pointer;
    margin: 0px 1px;
}

